# Quickcrawl

./: .gitignore  README.md  vercel.json
backend-legacy/: .env.example  pyproject.toml
backend-legacy/app/: app_settings.py  config.py  main.py  security.py
backend-legacy/app/api/: auth.py  inspect.py  jobs.py  properties.py  quota.py  settings.py  setup.py
backend-legacy/app/auth/: crypto.py  keychain.py  oauth.py  session.py
backend-legacy/app/db/: database.py  models.py
backend-legacy/app/google/: client.py  indexing.py  searchconsole.py
backend-legacy/app/worker/: queue.py  rate_limiter.py  retry.py
backend-legacy/tests/: test_crypto.py  test_dedup.py  test_oauth.py  test_property_sync_tenant_scope.py  test_retry.py  test_security.py
frontend/: next.config.js  package.json  pnpm-lock.yaml  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/batches/: page.tsx
frontend/app/batches/detail/: page.tsx
frontend/app/inspect/: page.tsx
frontend/app/settings/: page.tsx
frontend/app/welcome/: page.tsx
frontend/components/: Button.tsx  Card.tsx  DropZone.tsx  EmptyState.tsx  Icon.tsx  Logo.tsx  Navbar.tsx  ProgressBar.tsx  PropertySelect.tsx  QuotaRing.tsx  QuotaWidget.tsx  Skeleton.tsx  StatusPill.tsx
frontend/lib/: api.ts  google-client.ts  motion.ts  store.ts  utils.ts
