[project]
name = "gsc-indexer-backend"
version = "0.1.0"
description = "Local FastAPI backend for Google Search Console mass indexing"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlmodel>=0.0.22",
    "aiosqlite>=0.20.0",
    "greenlet>=3.1.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "httpx>=0.27.0",
    "authlib>=1.3.2",
    "itsdangerous>=2.2.0",
    "google-auth>=2.36.0",
    "google-auth-oauthlib>=1.2.1",
    "cryptography>=43.0.1",
    "keyring>=25.5.0",
    "python-multipart>=0.0.12",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
    "types-cryptography>=3.21.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "S", "B", "ASYNC", "PT"]
ignore = ["S101", "E501"]

[tool.ruff.lint.per-file-ignores]
# FastAPI uses `Depends(...)` as a default argument by design.
"app/api/*.py" = ["B008"]
# Tests can use string parametrize names.
"tests/*.py" = ["PT006"]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "parents"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
